# 15-puzzle-benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  dockerfile  readme
15-puzzle-state/: CMakeLists.txt  cuda_distance.hpp  distance.cpp  distance.hpp  state.cpp  state.hpp  state_file_operations.hpp
A-star-model/: 15-puzzle-a-star-solver.cpp  15-puzzle-a-star-solver.hpp  15_puzzle_api.cpp  CMakeLists.txt  benchmark.cpp  distance.cpp  distance.hpp  state.cpp  state.hpp
ACO-model/: 15-puzzle-aco-solver.cu  15-puzzle-aco-solver.hpp  CMakeLists.txt  aco_api.cpp  benchmark.cpp  cuda_state_utils.hpp
BFS-solver/: 15-puzzle-bfs-solver.cpp  15-puzzle-bfs-solver.hpp  CMakeLists.txt  benchmark.cpp  bfs_api.cpp
benchmarks/: CMakeLists.txt  benchmark-a-star.cpp
data-generation/: CMakeLists.txt  c_api.cpp  generate_sample_bfs.cpp  generate_sample_random_walk.cpp  generate_sample_state.hpp
experiments/: aco_benchmarks.py  aco_optimization.py  exact_benchmarks.py  greedy_benchmarks.py
tests/: CMakeLists.txt  test_get_available_moves.cpp  test_puzzle_solver.cpp  test_state.cpp
weighted-A-star-model/: 15-puzzle-weighted-a-star-solver.cpp  15-puzzle-weighted-a-star-solver.hpp  15_puzzle_api.cpp  CMakeLists.txt  benchmark.cpp
